--- a/FoodDeliveryApp.Web/Views/Shared/_Layout.cshtml
+++ b/FoodDeliveryApp.Web/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ShoppingCart" asp-action="Index">My Cart</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PartnerData" asp-action="Index">View partner Accommodations</a>
+                        </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle text-dark" href="#" id="orderStatusDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 View Order Status
